<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/drag"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight=".5"
        android:background="@drawable/storeshelves"
        android:contentDescription="@string/topcontainer"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/article1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/article1"
            android:src="@drawable/barcode" />

        <ImageView
            android:id="@+id/article2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/article2"
            android:src="@drawable/barcode" />

        <ImageView
            android:id="@+id/article3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/article3"
            android:src="@drawable/barcode" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight=".5"
        android:background="@drawable/shoppingcart"
        android:contentDescription="@string/bottomcontainer"
        android:gravity="center"
        android:orientation="horizontal" >
    </LinearLayout>

    <ImageButton
        android:id="@+id/buttonDragtoMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description"
        android:padding="5dp"
        android:src="@drawable/exit" />

</LinearLayout>