<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" >

    <TextView
        android:id="@+id/textPager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inventorylist"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageButton
        android:id="@+id/imagePager"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_below="@+id/textPager"
        android:background="@drawable/customborder"
        android:contentDescription="@string/description" />

    <EditText
        android:id="@+id/quantityPager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imagePager"
        android:hint="@string/numberofitems"
        android:inputType="number"
        android:textSize="18sp" />
    
    <ImageButton
        android:id="@+id/buttonUndo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quantityPager"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description"
        android:padding="5dp"
        android:src="@drawable/undo"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/textUndo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quantityPager"
        android:layout_toRightOf="@+id/buttonUndo"
        android:text="@string/undo"
        android:textSize="20sp" />
    
    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/sswitch"
        android:layout_below="@+id/buttonUndo" />

</RelativeLayout>