<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/myshape"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
    <ImageButton
        android:id="@+id/ButtonStartAnimation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startAnimation"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description"
        android:padding="5dp"
        android:src="@drawable/state_images" />

    <TextView
        android:id="@+id/textstartanimation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/chartreuse"
        android:text="@string/animation"
        android:textSize="20sp" />
        
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/description"
        android:src="@drawable/barcode" />
    
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/imageView1"
        android:contentDescription="@string/description"
        android:src="@drawable/door" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView1"
        android:layout_alignRight="@+id/imageView1"
        android:layout_marginBottom="30dp"
        android:text="@string/itemname"
        android:textAppearance="?android:attr/textAppearanceLarge" />
        
</RelativeLayout>