<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget31"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <EditText
        android:id="@+id/EditTextSongURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:height="100dp"
        android:inputType="textUri"
        android:labelFor="@+id/EditTextSongURL"
        android:lines="3"
        android:maxLines="3"
        android:minLines="1" >

        <requestFocus />

        <requestFocus />
    </EditText>

    <ImageButton
        android:id="@+id/ButtonTestPlayPause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditTextSongURL"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/TestPlayPause"
        android:onClick="onClick"
        android:src="@drawable/button_play" />

    <SeekBar
        android:id="@+id/SeekBarTestPlay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ButtonTestPlayPause" />

    <ImageButton
        android:id="@+id/buttonExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SeekBarTestPlay"
        android:contentDescription="@string/description"
        android:padding="5dp"
        android:src="@drawable/exit" />

    <ImageView
        android:id="@+id/album_art"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/SeekBarTestPlay"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/buttonExit"
        android:contentDescription="@string/albumart"
        android:src="@drawable/barcode" />

    <TextView
        android:id="@+id/songinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SeekBarTestPlay"
        android:layout_toRightOf="@+id/album_art"
        android:layout_margin="16dp"
        android:text="@string/description"
        android:textSize="32sp" />

</RelativeLayout>